apps/jupyter/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: jupyter-ingress-ext
  namespace: jupyter
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`jupyter.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: proxy-public
          port: http
