apps/jupyter/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: jupyter-ingress
  namespace: jupyter
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int-old
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`jupyter.sobrinho.pt`)
      kind: Rule
      services:
        - name: proxy-public
          port: http
  tls:
    secretName: jupyter-cert
